<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>nc.sgcb.labs</groupId>
    <artifactId>api-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <description>Parent pom for a simple Web application</description>
    <packaging>pom</packaging>
    <url/>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>ch4mpy</id>
            <name>Jérôme Wacongne</name>
            <email>ch4mp@c4-soft.com</email>
            <url>https://github.com/ch4mpy</url>
        </developer>
    </developers>

    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>

    <properties>
        <java.version>25</java.version>
        <spring-cloud.version>2025.1.2</spring-cloud.version>

        <com.c4-soft.springaddons.version>9.1.3</com.c4-soft.springaddons.version>

        <openapi-generator-maven-plugin.version>7.22.0</openapi-generator-maven-plugin.version>
        <swagger-annotations.version>2.2.50</swagger-annotations.version>
        <springdoc-openapi.version>3.0.3</springdoc-openapi.version>
        <springdoc-openapi-maven-plugin.version>1.5</springdoc-openapi-maven-plugin.version>
        <integration-tests.scheme>https</integration-tests.scheme>
        <integration-tests.hostname>localhost</integration-tests.hostname>
        <integration-tests.port>7080</integration-tests.port>
        <spring.profiles.active></spring.profiles.active>
        <springdoc-openapi.output-dir>${project.basedir}/../../openapi</springdoc-openapi.output-dir>
        <fmt-maven-plugin.version>2.29</fmt-maven-plugin.version>
        <mapstruct.version>1.7.0.Beta1</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <therapi.version>0.15.0</therapi.version>

        <opentelemetry-logback-appender-1.0.version>2.28.0-alpha</opentelemetry-logback-appender-1.0.version>

        <ca-certificates.binding>
            ${project.basedir}/../certs/host.docker.internal.jks
        </ca-certificates.binding>

        <imageName>bdp-labs.c4-soft.com/${project.artifactId}:${project.version}</imageName>

        <error_prone_core.version>2.49.0</error_prone_core.version>
        <nullaway.version>0.13.4</nullaway.version>

        <wiremock-standalone.version>4.0.0-beta.34</wiremock-standalone.version>
        <wiremock-maven-plugin.version>7.3.0</wiremock-maven-plugin.version>
        <wiremock-spring-boot.version>4.2.1</wiremock-spring-boot.version>
    </properties>

    <modules>
        <module>sgcb-starter-service-common</module>
        <module>user-service</module>
        <module>customer-service</module>
        <module>account-service</module>
        <module>card-service</module>
        <module>gateway</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>nc.sgcb.labs</groupId>
                <artifactId>sgcb-starter-service-common</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>io.opentelemetry.instrumentation</groupId>
                <artifactId>opentelemetry-logback-appender-1.0</artifactId>
                <version>${opentelemetry-logback-appender-1.0.version}</version>
            </dependency>

            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>${swagger-annotations.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-javadoc</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-common</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
                <version>${springdoc-openapi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.therapi</groupId>
                <artifactId>therapi-runtime-javadoc</artifactId>
                <version>${therapi.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.therapi</groupId>
                <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                <version>${therapi.version}</version>
            </dependency>

            <dependency>
                <groupId>com.c4-soft.springaddons</groupId>
                <artifactId>spring-addons-starter-oidc</artifactId>
                <version>${com.c4-soft.springaddons.version}</version>
            </dependency>
            <dependency>
                <groupId>com.c4-soft.springaddons</groupId>
                <artifactId>spring-addons-starter-oidc-test</artifactId>
                <version>${com.c4-soft.springaddons.version}</version>
            </dependency>
            <dependency>
                <groupId>com.c4-soft.springaddons</groupId>
                <artifactId>spring-addons-starter-rest</artifactId>
                <version>${com.c4-soft.springaddons.version}</version>
            </dependency>
            <dependency>
                <groupId>com.c4-soft.springaddons</groupId>
                <artifactId>spring-addons-starter-openapi</artifactId>
                <version>${com.c4-soft.springaddons.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.errorprone</groupId>
                <artifactId>error_prone_core</artifactId>
                <version>${error_prone_core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.uber.nullaway</groupId>
                <artifactId>nullaway</artifactId>
                <version>${nullaway.version}</version>
            </dependency>

            <dependency>
                <groupId>org.wiremock</groupId>
                <artifactId>wiremock-standalone</artifactId>
                <version>${wiremock-standalone.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wiremock.integrations</groupId>
                <artifactId>wiremock-spring-boot</artifactId>
                <version>${wiremock-spring-boot.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <fork>true</fork>
                        <parameters>true</parameters>
                        <compilerArgs combine.children="append">
                            <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>--should-stop=ifError=FLOW</arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                            </arg>
                            <arg>
                                -J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                            </arg>
                        </compilerArgs>
                        <annotationProcessorPaths combine.children="append">
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct-binding.version}</version>
                            </path>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                            </path>
                            <path>
                                <groupId>com.github.therapi</groupId>
                                <artifactId>therapi-runtime-javadoc-scribe</artifactId>
                            </path>
                            <path>
                                <groupId>org.hibernate</groupId>
                                <artifactId>hibernate-jpamodelgen</artifactId>
                                <version>${hibernate.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <configuration>
                        <image>
                            <bindings>
                                <binding>
                                    ${ca-certificates.binding}:/platform/bindings/ca-certificates:ro
                                </binding>
                            </bindings>
                            <env>
                                <BP_JVM_VERSION>${java.version}</BP_JVM_VERSION>
                            </env>
                        </image>
                        <imageName>${imageName}</imageName>
                        <excludes>
                            <exclude>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                            </exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springdoc</groupId>
                    <artifactId>springdoc-openapi-maven-plugin</artifactId>
                    <version>${springdoc-openapi-maven-plugin.version}</version>
                    <configuration>
                        <apiDocsUrl>
                            ${integration-tests.scheme}://${integration-tests.hostname}:${integration-tests.port}/v3/api-docs
                        </apiDocsUrl>
                        <outputFileName>${project.artifactId}.openapi.json</outputFileName>
                        <outputDir>${springdoc-openapi.output-dir}</outputDir>
                        <skip>false</skip>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                    <configuration>
                        <generatorName>spring</generatorName>
                        <cleanupOutput>false</cleanupOutput>
                        <skipIfSpecIsUnchanged>true</skipIfSpecIsUnchanged>
                        <generateApiTests>false</generateApiTests>
                        <generateModelDocumentation>false</generateModelDocumentation>
                        <generateModelTests>false</generateModelTests>
                        <generateSupportingFiles>false</generateSupportingFiles>
                        <configOptions>
                            <documentationProvider>none</documentationProvider>
                            <annotationLibrary>none</annotationLibrary>
                            <ensureUniqueParams>true</ensureUniqueParams>
                            <generateBuilders>false</generateBuilders>
                            <interfaceOnly>true</interfaceOnly>
                            <library>spring-http-interface</library>
                            <openApiNullable>false</openApiNullable>
                            <serializableModel>true</serializableModel>
                            <skipDefaultInterface>true</skipDefaultInterface>
                            <useJakartaEe>true</useJakartaEe>
                            <useOptional>true</useOptional>
                        </configOptions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>com.spotify.fmt</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>${fmt-maven-plugin.version}</version>
                    <configuration>
                        <sourceDirectory>target/generated-sources</sourceDirectory>
                        <verbose>true</verbose>
                        <filesNamePattern>.*\.java</filesNamePattern>
                        <skip>false</skip>
                        <skipSourceDirectory>false</skipSourceDirectory>
                        <skipTestSourceDirectory>true</skipTestSourceDirectory>
                        <skipSortingImports>false</skipSortingImports>
                        <style>google</style>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>format</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>uk.co.automatictester</groupId>
                    <artifactId>wiremock-maven-plugin</artifactId>
                    <version>${wiremock-maven-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.wiremock</groupId>
                            <artifactId>wiremock-standalone</artifactId>
                            <version>${wiremock-standalone.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

</project>
